--- a/Task_1_1_2/app/build.gradle
+++ b/Task_1_1_2/app/build.gradle
@@ -8,6 +8,8 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'java'
+    id 'jacoco' // Добавляем плагин JaCoCo
 }
 
 repositories {
@@ -43,4 +45,15 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
 }
