--- a/Task_1_1_2/app/build.gradle
+++ b/Task_1_1_2/app/build.gradle
@@ -51,9 +51,14 @@ jacoco {
 }
 
 jacocoTestReport {
-    dependsOn test
+    dependsOn test // Убедитесь, что тесты выполнены перед отчетом
     reports {
-        xml.enabled true
-        html.enabled true
+        xml {
+            destination file("$buildDir/reports/jacoco/test/jacocoTestReport.xml")
+        }
+        html {
+            destination file("$buildDir/reports/jacoco/test/html")
+        }
     }
 }
+
