--- a/Task_1_1_2/build.gradle
+++ b/Task_1_1_2/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'jacoco'
 }
 
-group = 'org.example'
+group = 'ru.nsu.shadrina'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -22,6 +22,5 @@ test {
 jacocoTestReport {
     reports {
         xml.required = true
-        html.required = true
     }
 }
