--- a/Task_1_2_1/build.gradle
+++ b/Task_1_2_1/build.gradle
@@ -10,6 +10,13 @@ repositories {
     mavenCentral()
 }
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -23,4 +30,4 @@ jacocoTestReport {
     reports {
         xml.required = true
     }
-}
+}   
